@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.jgrapht.graph.DefaultDirectedWeightedGraph;
@@ -33,8 +32,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -80,8 +79,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -127,8 +126,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -187,8 +186,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -240,8 +239,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -276,8 +275,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -351,8 +350,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -433,8 +432,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -509,8 +508,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -585,8 +584,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -657,8 +656,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -747,8 +746,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -830,8 +829,8 @@ class MetricsCollectionTest {
 
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
-        javaParser.parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
             metricsVisitor.visit(cu, ctx);
         });
 
@@ -867,9 +866,9 @@ class MetricsCollectionTest {
         GraphMetricsCollector metricsCollector = new GraphMetricsCollector(classGraph, packageGraph);
         MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
 
-        List<Path> list = Files.walk(Paths.get(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
         javaParser
-                .parse(list, Paths.get(srcDirectory.getAbsolutePath()), ctx)
+                .parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx)
                 .forEach(cu -> metricsVisitor.visit(cu, ctx));
 
         metricsCollector.finalizeMetrics();
@@ -883,5 +882,50 @@ class MetricsCollectionTest {
                 metrics.getCouplingBetweenObjects(),
                 "CBO must be 0: Semaphore.acquire() is Javadoc-only and must not be counted as a foreign dependency. Got: "
                         + metrics.getCouplingBetweenObjects());
+    }
+
+    @Test
+    void collectRecordClassMetrics() throws IOException {
+        File srcDirectory = new File("src/test/java/org/hjug/graphbuilder/metrics/testclasses");
+
+        JavaParser javaParser = JavaParser.fromJavaVersion().build();
+        ExecutionContext ctx = new InMemoryExecutionContext(Throwable::printStackTrace);
+
+        DefaultDirectedWeightedGraph<String, DefaultWeightedEdge> classGraph =
+                new DefaultDirectedWeightedGraph<>(DefaultWeightedEdge.class);
+        DefaultDirectedWeightedGraph<String, DefaultWeightedEdge> packageGraph =
+                new DefaultDirectedWeightedGraph<>(DefaultWeightedEdge.class);
+
+        GraphMetricsCollector metricsCollector = new GraphMetricsCollector(classGraph, packageGraph);
+
+        MetricsCollectingVisitor metricsVisitor = new MetricsCollectingVisitor(metricsCollector);
+
+        List<Path> list = Files.walk(Path.of(srcDirectory.getAbsolutePath())).collect(Collectors.toList());
+        javaParser.parse(list, Path.of(srcDirectory.getAbsolutePath()), ctx).forEach(cu -> {
+            metricsVisitor.visit(cu, ctx);
+        });
+
+        metricsCollector.finalizeMetrics();
+
+        ClassMetrics recordMetrics =
+                metricsCollector.getClassMetrics("org.hjug.graphbuilder.metrics.testclasses.RecordMetricsExample");
+        Assertions.assertNotNull(recordMetrics, "RecordMetricsExample metrics should be collected");
+
+        Assertions.assertTrue(recordMetrics.getLinesOfCode() > 0, "LOC should be greater than 0");
+        Assertions.assertEquals(
+                3, recordMetrics.getNumberOfAttributes(), "Record should have 3 components as attributes");
+        Assertions.assertEquals(3, recordMetrics.getNumberOfPublicAttributes(), "Record components should be public");
+        // Record accessor methods (name(), value(), tags()) are implicit and not explicitly declared in source
+        // Only explicitly declared methods like getDisplayName() are counted as accessors
+        Assertions.assertEquals(
+                1,
+                recordMetrics.getNumberOfAccessorMethods(),
+                "Record should have 1 accessor method (getDisplayName())");
+
+        System.out.println("\nRecordMetricsExample Metrics:");
+        System.out.println("  LOC: " + recordMetrics.getLinesOfCode());
+        System.out.println("  Number of Attributes: " + recordMetrics.getNumberOfAttributes());
+        System.out.println("  Number of Public Attributes: " + recordMetrics.getNumberOfPublicAttributes());
+        System.out.println("  Number of Accessor Methods: " + recordMetrics.getNumberOfAccessorMethods());
     }
 }
